--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
     "recharts": "^3.5.1",
+    "react-router-dom": "^7.0.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
